# wakaama

./: .gitignore
coap/er-coap-13/: er-coap-13.c
examples/client/: lwm2mclient.c
examples/native-node-client/: CMakeLists.txt  binding.gyp  package-lock.json  package.json
examples/native-node-client/lib/: binding.js
examples/native-node-client/src/: app.js  func.c  func.h  functions.c  functions.h  hello.c  interface.c  lwm2mserver.c  lwm2mserver.h
examples/native-node-client/test/: test_binding.js
examples/server/: interface.c  lwm2mserver.c
